--- a/styles.css
+++ b/styles.css
@@ -4,22 +4,42 @@
   position: absolute;
   margin: 0%;
   overflow: hidden;
-  background: linear-gradient(
-      327.21deg,
-      rgba(33, 0, 75, 0.24) 3.65%,
-      rgba(60, 0, 136, 0) 40.32%
+  background: radial-gradient(
+      circle at top right,
+      #be0000,
+      #0a0000 20%,
+      #000000 80%
     ),
-    linear-gradient(
-      245.93deg,
-      rgba(209, 21, 111, 0.16) 0%,
-      rgba(209, 25, 80, 0) 36.63%
-    ),
-    linear-gradient(
-      147.6deg,
-      rgba(58, 19, 255, 0) 29.79%,
-      rgba(98, 19, 255, 0.01) 85.72%
-    ),
-    #13111c;
+    #000000;
+}
+
+#mover {
+  position: absolute;
+  width: 75px;
+  height: 75px;
+  filter: blur(25px);
+  background: radial-gradient(circle, #a10000, rgba(0, 0, 0, 0) 75%);
+}
+
+* {
+  pointer-events: none;
+  cursor: initial;
+}
+
+h1 {
+  padding: 0;
+  margin: 0;
+}
+
+#content {
+  backdrop-filter: blur(5px);
+  /* background-color: rgba(0, 0, 0, 0.2); */
+  border-radius: 10px;
+  text-justify: newspaper;
+  padding: 5px;
+  color: white;
+  margin: 10px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body {
   overflow: hidden;
